--- a/src/client/styles/components/icon.scss
+++ b/src/client/styles/components/icon.scss
@@ -1,5 +1,5 @@
 // TODO: Decouple icon component from button component
-
+// Hint: icon should not be positioned with "absolute"!
 .icon {
   position: absolute;
   top: 50%;
