--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -1,5 +1,6 @@
 // Base
 @import './reset.scss';
+@import './functions.scss';
 @import './variables.scss';
 @import './typography.scss';
 @import './atomic.scss';
