--- a/src/client/styles/components/header.scss
+++ b/src/client/styles/components/header.scss
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   height: 3em;
+  min-width: $page-width-min;
   padding: 0.5em 0;
   background: $color-bg-lighter;
   color: $color-fg-lighter;
