--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -5,60 +5,50 @@
 @import './typography.scss';
 @import './atomic.scss';
 
-html, body {
+body {
   min-width: $page-width-min;
   overflow-x: hidden;
 }
 
 // Components
-@import './components/button.scss';
-@import './components/greeting.scss';
-@import './components/header.scss';
-@import './components/motto.scss';
-@import './components/server.scss';
-@import './components/divider.scss';
-@import './components/icon.scss';
+@import './components/Button.scss';
+@import './components/Greeting.scss';
+@import './components/Grid.scss';
+@import './components/Layout.scss';
+@import './components/Motto.scss';
+@import './components/Navbar.scss';
+@import './components/ServerCard.scss';
+@import './components/Spacing.scss';
+// @import './components/divider.scss';
+// @import './components/icon.scss';
 
 // Misc
-.container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 2rem;
+// .container {
+//   max-width: 1200px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   padding: 0 2rem;
 
-  @media screen and (max-width: 460px) {
-    padding: 0 1rem;
-  }
-}
+//   @media screen and (max-width: 460px) {
+//     padding: 0 1rem;
+//   }
+// }
 
-.container-text {
-  max-width: 750px;
-}
+// .container-text {
+//   max-width: 750px;
+// }
 
-.download {
-  max-width: 435px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 2rem;
-}
+// .download {
+//   max-width: 435px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   padding: 0 2rem;
+// }
 
-.content {
-  margin-top: 6em;
-}
+// .content {
+//   margin-top: 6em;
+// }
 
-.mdi {
-  min-width: 1em;
-}
-
-.Greeting__background-video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  transform: translateX(-50%) translateY(-50%);
-  background: url("/images/y37fbax.jpg") no-repeat;
-  background-size: cover;
-}
+// .mdi {
+//   min-width: 1em;
+// }
