--- a/src/client/styles/components/Greeting.scss
+++ b/src/client/styles/components/Greeting.scss
@@ -1,6 +1,6 @@
-.greeting {
+.Greeting {
   position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh - 3.5rem);
 
   h1 {
     font-size: 2rem;
@@ -14,7 +14,7 @@
   }
 }
 
-.greeting-stripe {
+.Greeting__stripe {
   position: absolute;
   top: 50%;
   left: 0;
@@ -23,7 +23,7 @@
   padding: 1em 0;
 }
 
-.greeting-flex {
+.Greeting__flex {
   display: flex;
   align-items: center;
   height: 100%;
@@ -33,7 +33,7 @@
   }
 }
 
-.greeting-download {
+.Greeting__download {
   margin-left: 2rem;
   font-size: 2.5rem;
 
@@ -44,9 +44,13 @@
   @media screen and (max-width: 460px) {
     font-size: 1.75rem;
   }
+
+  .Button {
+    white-space: nowrap;
+  }
 }
 
-@keyframes greeting-arrow-bounce {
+@keyframes Greeting__arrow-bounce {
   0%, 100% {
     transform: translateY(0);
   }
@@ -55,15 +59,29 @@
   }
 }
 
-.greeting-arrow {
+.Greeting__arrow {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  font-size: 4em;
-  line-height: 1em;
+  font-size: 3em;
+  line-height: 2em;
   text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.5);
-  animation: greeting-arrow-bounce 2s infinite;
+  animation: Greeting__arrow-bounce 2s infinite;
   text-align: center;
   transition: opacity 200ms;
+}
+
+.Greeting__background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translateX(-50%) translateY(-50%);
+  // background: url("/images/y37fbax.jpg") no-repeat;
+  background: #000;
+  background-size: cover;
 }
