--- a/src/client/styles/components/Motto.scss
+++ b/src/client/styles/components/Motto.scss
@@ -1,34 +1,34 @@
-.motto {
+.Motto {
   background-color: $color-bg-lighter;
   padding: 1rem 0;
   position: relative;
 }
 
-.motto-header {
+.Motto__header {
   text-align: center;
   margin-bottom: 1em;
 }
 
-.motto-quote {
+.Motto__quote {
   display: flex;
 }
 
-.motto-quote-symbol {
+.Motto__quote-symbol {
   font-size: 8em;
   line-height: 1em;
   margin-bottom: -0.5em;
 }
 
-.motto-quote-author {
+.Motto__quote-author {
   margin-right: 2em;
 }
 
 @media screen and (max-width: 640px) {
-  .motto-quote {
+  .Motto__quote {
     display: block;
   }
 
-  .motto-quote-author {
+  .Motto__quote-author {
     margin-bottom: 2em;
   }
 }
