--- a/src/client/styles/components/ServerCard.scss
+++ b/src/client/styles/components/ServerCard.scss
@@ -12,7 +12,7 @@
   flex-wrap: wrap;
   align-content: flex-start;
   background-color: #222;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
 }
 
 .ServerCard__header {
