License under GPL-2.0
Issue #4

--- a/packages/warsow-web-client/styles/components/Layout.scss
+++ b/packages/warsow-web-client/styles/components/Layout.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 $Layout__navbar-height: 3.5rem;
 
 .Layout {
