--- a/packages/warsow-web-client/styles/components/MessageBox.scss
+++ b/packages/warsow-web-client/styles/components/MessageBox.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 .MessageBox {
   background: scale-color($color-none, $lightness: -70%);
   padding: 0.5em 1em;
