--- a/packages/warsow-web-client/styles/components/Spacing.scss
+++ b/packages/warsow-web-client/styles/components/Spacing.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 .Spacing {
   margin-top: 1rem;
   height: 1rem;
