--- a/packages/warsow-web-client/styles/reset.scss
+++ b/packages/warsow-web-client/styles/reset.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 // http://meyerweb.com/eric/tools/css/reset/
 // v2.0 | 20110126
 
