--- a/packages/warsow-web-client/styles/semantic.scss
+++ b/packages/warsow-web-client/styles/semantic.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 // Semantic UI components
 // @import '~semantic-ui-css/components/accordion.css';
 // @import '~semantic-ui-css/components/ad.css';
