--- a/packages/warsow-web-client/styles/atomic.scss
+++ b/packages/warsow-web-client/styles/atomic.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 .text-big {
   font-size: 1.25em;
   line-height: 1em;
