--- a/packages/warsow-web-client/styles/components/Greeting.scss
+++ b/packages/warsow-web-client/styles/components/Greeting.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 .Greeting {
   position: relative;
   min-height: calc(100vh - 3.5rem);
