--- a/packages/warsow-web-client/styles/components/Navbar.scss
+++ b/packages/warsow-web-client/styles/components/Navbar.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 .Navbar {
   height: 100%;
   background: $color-bg-lighter;
