--- a/packages/warsow-web-client/styles/typography.scss
+++ b/packages/warsow-web-client/styles/typography.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 html, body {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 14pt;
