--- a/packages/warsow-web-client/styles/variables.scss
+++ b/packages/warsow-web-client/styles/variables.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2018 Aleksej Komarov
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 // Page width
 $page-width-min: 22rem;
 $page-width-mobile: 56rem;
